# ray-tracer-from-scratch

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: Color.h  Object.h  Plane.cpp  Plane.h  PointLight.h  Ray.h  Scene.cpp  Scene.h  Settings.h  Sphere.cpp  Sphere.h  Surface.h  example1.txt  example2.txt  example3.txt  example4.txt  example5.txt  geometry.h  main.cpp  out.ppm
